examples/test/testpolicy689.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy689
  namespace: namespace20
spec:
  podSelector:
    matchLabels:
      key46: value34
      key3: value37
      key36: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value0
          key2: value23
          key24: value16
      podSelector:
        matchLabels:
          key17: value44
          key35: value0
